components/menu/styles/index.less
@import "../../styles/less-css-var.less";

.k-menu {
  display: flex;
  flex-direction: column;
  margin: 0;
  padding: 4px;
  outline: 0;
  gap: 4px;
  font-size: 14px;
  position: relative;
  zoom: 1;
  background: var(--kui-color-bg);
  list-style: none;
  color: var(--kui-color-text);
  transition: width 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
  -webkit-user-select: none;
  user-select: none;
  box-sizing: border-box;

  &-item-divider {
    height: 1px;
    margin: 4px 16px;
    overflow: hidden;
    line-height: 0;
    background-color: var(--kui-color-border);
  }

  .k-menu-title-content,
  .k-menu-submenu-title-content {
    opacity: 1;
    white-space: nowrap;
    transition: font-size 0.3s ease-in-out;
    line-height: 1;
  }

  .k-menu-item-icon {
    margin-right: 8px;
    font-size: 14px;
    transition: font-size 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
  }

  &-submenu-arrow {
    transition: all 0.3s;
    margin-left: 6px;
    width: 14px;
    text-indent: 0;
  }

  .k-menu-submenu {
    margin: 0;
  }

  &-item,
  .k-menu-submenu-title {
    box-sizing: border-box;
    cursor: pointer;
    position: relative;
    transition: border 0.3s ease-in-out;
    list-style: none;
    display: flex;
    align-items: center;
    line-height: 1;
  }

  .k-menu-submenu-title {
    .k-menu-title-content {
      width: calc(100% - 20px);
    }
  }
  .k-menu-item-group {
    padding-bottom: 10px;
  }
  .k-menu-item-group-title {
    font-size: 12px;
    color: var(--kui-color-icon);
  }

  a {
    color: var(--kui-color-text);
    text-decoration: none;

    &::before {
      position: absolute;
      inset: 0;
      background-color: transparent;
      content: "";
    }

    &:hover {
      text-decoration: none;
    }
  }

  .k-menu-item-disabled,
  .k-menu-submenu-disabled {
    &:hover {
      border-color: transparent;
    }

    * {
      color: var(--kui-color-text-disabled);
      cursor: not-allowed;
    }
  }
}
.k-menu-submenu {
  display: flex;
  flex-direction: column;
  gap: 4px;
}
.k-menu-inline {
  border-right: 1px solid var(--kui-color-border);
  width: 100%;

  .k-menu-item,
  .k-menu-submenu {
    line-height: 1;
    font-size: 14px;
    list-style: none;
  }

  .k-menu-item-group-title {
    padding: 0 16px 10px 10px;
    box-sizing: border-box;
  }

  .k-menu {
    border: 0;
    list-style: none;
    margin: 0;
    padding: 0;
  }

  .k-menu-item {
    padding: 10px 16px 10px 10px;
    border-radius: var(--kui-border-radius);

    &::after {
      content: "";
      position: absolute;
      width: 0;
      height: 0;
      border-right: 3px solid var(--kui-color-primary);
      top: 50%;
      right: 0;
      transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
    }
    &:not(.k-menu-item-selected) {
      &:hover {
        background: var(--kui-color-item-hover);
      }
      &:active {
        background: var(--kui-color-item-active);
      }
    }
  }

  .k-menu-submenu-active .k-menu-submenu-title:active {
    background: var(--kui-color-item-active);
  }

  .k-menu-submenu-title {
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 12px;
    padding-bottom: 10px;
    box-sizing: border-box;
    position: relative;
    border-radius: var(--kui-border-radius);
    .k-menu-submenu-title-content {
      flex: 1;
    }
    .k-menu-submenu-arrow {
      &::after,
      &::before {
        content: "";
        position: absolute;
        width: 6px;
        height: 1.5px;
        background-color: currentcolor;
        border-radius: 6px;
        transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
      }

      &::before {
        transform: rotate(45deg) translateX(-2.5px);
      }

      &::after {
        transform: rotate(-45deg) translateX(2.5px);
      }
    }
    &:not(.k-menu-item-selected) {
      &:hover {
        background-color: var(--kui-color-item-hover);
      }

      &:active {
        background-color: var(--kui-color-item-active);
      }
    }
  }

  .k-menu-submenu-sub {
    transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
    overflow: hidden;
    position: static;
  }

  > .k-menu-submenu-opened > .k-menu-submenu-title > .k-menu-submenu-arrow {
    transform: translateY(-2px);

    &::before {
      transform: rotate(-45deg) translateX(-2.5px);
    }

    &::after {
      transform: rotate(45deg) translateX(2.5px);
    }
  }

  .k-menu-item-selected {
    background-color: var(--kui-color-item-selected);

    &::after {
      display: none;
    }
  }
}

.k-menu-vertical {
  width: 100%;
  border-right: 1px solid var(--kui-color-border);
  display: inline-flex;

  .k-menu-item-selected {
    background-color: var(--kui-color-item-selected);
  }

  .k-menu-submenu-active,
  .k-menu-submenu-selected {
    .k-menu-submenu-title {
      color: var(--kui-color-primary);
    }
  }

  .k-menu-item,
  .k-menu-submenu-title {
    padding: 10px 12px 10px 10px;
    border-radius: var(--kui-border-radius);
    &:not(.k-menu-item-selected) {
      &:hover {
        background-color: var(--kui-color-item-hover);
      }

      &:active {
        background-color: var(--kui-color-item-active);
      }
    }
  }

  > .k-menu-submenu > .k-menu-submenu-title > .k-menu-submenu-arrow {
    position: absolute;
    right: 8px;
    margin: 0;
    top: 50%;

    &::after,
    &::before {
      content: "";
      position: absolute;
      width: 6px;
      height: 1.5px;
      background-color: currentcolor;
      border-radius: 6px;
      transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
    }

    &::before {
      transform: rotate(45deg) translateY(-2.5px);
    }

    &::after {
      transform: rotate(-45deg) translateY(2.5px);
    }
  }
}

.k-menu-horizontal {
  border-bottom: 1px solid var(--kui-color-border);
  white-space: nowrap;
  font-size: 0;
  line-height: 1;
  flex-direction: row;
  padding: 0;
  gap: 16px 32px;
  padding: 0 16px;
  .k-menu-icon-temp {
    display: none;
  }

  .k-menu-item,
  .k-menu-submenu {
    line-height: 1;
    position: relative;
    cursor: pointer;
    font-size: 14px;
    z-index: 3;
    display: inline-block;
    list-style: none;
    top: 1px;
    vertical-align: bottom;
    border-bottom: 2px solid transparent;
    display: inline-flex;
    align-items: center;
    min-height: 20px;
  }

  .k-menu-item,
  .k-menu-submenu-title {
    padding: 10px 0;
    box-sizing: border-box;
    &:hover {
      background: none;
    }
  }

  .k-menu-submenu-title {
    padding: 10px 0;
    box-sizing: border-box;
  }

  .k-menu-submenu {
    .k-menu-item,
    .k-menu-submenu {
      display: block;
    }

    .k-menu-submenu {
      position: relative;

      .k-menu-submenu-sub {
        top: 0;
        margin-left: 5px;
      }
    }
  }

  > .k-menu-submenu-active > .k-menu-submenu-title > .k-menu-submenu-arrow {
    transform: rotate(-180deg);
  }

  .k-menu-item-group-title {
    font-size: 12px;
    line-height: 1;
    padding: 0 12px;
    box-sizing: border-box;
  }

  > .k-menu-item-selected,
  > .k-menu-submenu-selected,
  > .k-menu-item-active,
  > .k-menu-submenu-active {
    border-bottom-color: var(--kui-color-primary);
    background-color: transparent;
  }

  .k-menu-submenu {
    .k-menu-item-selected {
      background-color: var(--kui-color-item-selected);
    }
  }
}

.k-menu-item-group-list {
  margin: 0;
  padding: 0;
  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.k-menu-inline-collapsed {
  width: 60px;
  overflow: hidden;
  > .k-menu-item,
  > .k-menu-submenu > .k-menu-submenu-title {
    text-overflow: clip;
    transition: padding 0.2s 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);

    > .k-menu-item-icon {
      transition: font-size 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
      font-size: 16px;
    }

    > .k-menu-title-content,
    > .k-menu-submenu-title-content {
      opacity: 0;
    }
  }

  > .k-menu-submenu {
    > .k-menu-submenu-title {
      .k-menu-title-content {
        opacity: 0;
      }

      .k-menu-submenu-arrow {
        opacity: 0;
      }
    }
  }
}

.k-menu-submenu-popup {
  position: absolute;
  z-index: 1001;
  .k-menu-submenu-sub {
    box-sizing: content-box;
    min-width: 160px;

    .k-menu-item-group-title {
      padding: 0 16px 0 12px;
      box-sizing: border-box;
    }

    .k-menu-item-group-list {
      margin: 0;
    }

    .k-menu {
      margin: 0;
      box-shadow: var(--kui-pop-shadow);

      border-radius: var(--kui-border-radius);
      background-color: var(--kui-color-bg-pop);
      border: 1px solid var(--kui-color-pop-border);

      .k-menu-item {
        padding: 8px 12px;
      }
      .k-menu-submenu-title {
        padding: 8px 12px;
      }
      .k-menu-item-group {
        line-height: 1;
      }
    }
  }

  .k-menu-submenu {
    position: relative;

    .k-menu-submenu-sub {
      left: calc(100% + 5px);
    }
  }

  .k-menu-vertical {
    border-right: none;

    .k-menu-icon-temp {
      display: none;
    }
  }
}

.k-menu-inline-collapsed {
  width: 60px;

  .k-menu-item,
  .k-menu-submenu-title {
    padding: 12px calc(50% - 8px);
    transition: padding 200ms 200ms ease-in-out;
  }

  .k-menu-submenu-selected {
    .k-menu-submenu-title {
      background-color: var(--kui-color-item-selected);
    }
  }

  .k-menu-item-icon {
    font-size: 16px;
    transition: font-size 0.3s ease-in-out;
    margin-right: 0;
  }

  .k-menu-submenu-arrow {
    opacity: 0;
  }
}

@keyframes k-menu-zoom {
  0% {
    transform: scale(0.8);
    opacity: 0;
  }

  100% {
    transform: scale(1);
    opacity: 1;
  }
}

.k-menu-submenu-fade-enter-active {
  animation-fill-mode: both;
  transform-origin: 0% 0%;
  animation: k-menu-zoom 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
}

.k-menu-submenu-fade-leave-active {
  animation-fill-mode: both;
  transform-origin: 0% 0%;
  animation: k-menu-zoom 0.2s cubic-bezier(0.215, 0.61, 0.355, 1) reverse;
}

@keyframes drop-down {
  0% {
    opacity: 0;
    transform: scaleY(0);
  }

  to {
    opacity: 1;
    transform: scaleY(1);
  }
}

.k-menu-submenu-popup-enter-active {
  &[k-placement="bottom-left"],
  &[k-placement="bottom-right"],
  &[k-placement="top-left"],
  &[k-placement="top-right"] {
    animation: drop-down 0.3s;
  }

  &[k-placement="left-bottom"],
  &[k-placement="right-top"],
  &[k-placement="left-top"],
  &[k-placement="right-bottom"] {
    animation-fill-mode: both;
    animation: k-menu-zoom 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
  }
}

.k-menu-submenu-popup-leave-active {
  &[k-placement="left-bottom"],
  &[k-placement="right-top"],
  &[k-placement="left-top"],
  &[k-placement="right-bottom"] {
    animation-fill-mode: both;
    animation: k-menu-zoom 0.2s cubic-bezier(0.215, 0.61, 0.355, 1) reverse;
  }

  &[k-placement="top-left"],
  &[k-placement="top-right"],
  &[k-placement="bottom-left"],
  &[k-placement="bottom-right"] {
    animation: drop-down 0.3s reverse;
  }
}

.k-collapse-slide-enter-active {
  animation: slide 0.2s ease-in-out;
  animation-fill-mode: both;
}

.k-collapse-slide-leave-active {
  animation: slide 0.2s ease-in-out reverse;
  animation-fill-mode: both;
}

@keyframes slide {
  0% {
    transform: scaleY(0);
    transform-origin: 0% 0%;
    opacity: 0;
  }

  100% {
    transform: scaleY(1);
    transform-origin: 0% 0%;
    opacity: 1;
  }
}

